fix(sidebar-tabs): add proper alignment styles

--- a/src/components/SidebarTabs/SidebarTabs.scss
+++ b/src/components/SidebarTabs/SidebarTabs.scss
@@ -3,6 +3,39 @@
   flex-direction: column;
   min-height: 100vh;
   border-left: 2px solid #ccc;
+
+  .ant-tabs-tab {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    padding: 10px;
+    text-align: center;
+    color: #333;
+    background: #efefef;
+    cursor: pointer;
+    border-radius: 0;
+    border-bottom: 0;
+    margin-bottom: -12px;
+    margin-right: 15px;
+    white-space: pre-wrap;
+    width: 100%;
+  }
+
+  .ant-tabs-tab-active {
+    color: #333;
+    background-color: white;
+    font-weight: bold;
+  }
+}
+
+.insight-tab-title {
+  color: #333;
+
+  &.active {
+    font-weight: bold;
+    color: #333;
+  }
 }
 
 .insight-full-tab {
@@ -15,28 +48,6 @@
   display: flex;
   flex-grow: 1;
   border: none;
-}
-
-.insight-tab-title {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 14px;
-  padding: 10px;
-  text-align: center;
-  color: #333;
-  background: #efefef;
-  cursor: pointer;
-  border-radius: 0;
-  border-bottom: 0;
-  margin-bottom: -12px;
-  margin-right: 15px;
-  width: 100%;
-
-  &.active {
-    background-color: white;
-    font-weight: bold;
-  }
 }
 
 .insight-tab-bar {
